--- a/src/components/feedbackOption/FeedbackOptions.module.css
+++ b/src/components/feedbackOption/FeedbackOptions.module.css
@@ -1,7 +1,9 @@
 .button {
     padding-top: 5px;
     padding-bottom: 5px;
-    width: 70px;
+    width: 100px;
+    font-size: 20px;
+    margin-bottom: 10px;
     
     cursor: pointer;
   }
