--- a/src/components/statistic/Statistics.module.css
+++ b/src/components/statistic/Statistics.module.css
@@ -1,6 +1,8 @@
 .text {
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-weight: 400;
+    margin-left: 50px;
+    font-size: 20px;
     
     
   }
